# ScreenShare_Android

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/doc/: note.md
app/libs/include/: MathCore.h
app/libs/include/libyuv/: scale_uv.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CImageFormatUtil.c  CImageFormatUtil.h  CImageUtil.c
app/src/main/java/: com_cmbc_av_jni_ImageFormatUtils.h
app/src/main/java/com/bairuitech/anychat/: AnyChatBaseEvent.java  AnyChatCameraHelper.java  AnyChatCertHelper.java  AnyChatDataEncDecEvent.java  AnyChatDefine.java  AnyChatStreamCallBack.java  AnyChatTransDataEvent.java  AnyChatUserInfoEvent.java  AnyChatVideoCallEvent.java  AnyChatVideoHelper.java
app/src/main/java/com/cmbc/av/: Key.java
app/src/main/java/com/cmbc/av/activity/: PermissionActivity.java  ScreenShareActivity.java  ScreenShareAnychat.java
app/src/main/java/com/cmbc/av/base/: IControl.java  MVCFactioy.java
app/src/main/java/com/cmbc/av/jni/: ImageFormatUtils.java
app/src/main/java/com/cmbc/av/service/: ScreenShareFloatView.java
app/src/main/java/com/cmbc/av/utils/: DatetimeUtil.java  FloatTool.java  ImageUtils.java  LogUtils.java  ToastUtils.java  ViewUtils.java
app/src/main/res/layout/: wbank_activity_screenshare.xml  wbank_service_floatview.xml
app/src/main/res/values/: strings.xml
src/: README.md
src/app/: CMakeLists.txt  build.gradle
src/app/src/main/: AndroidManifest.xml
src/app/src/main/cpp/: CImageUtil.c  YLYuvHelper.c  YLYuvHelper.h
src/app/src/main/java/: com_cmbc_av_jni_ImageFormatUtils.h
src/app/src/main/java/com/: Myapp.java
src/app/src/main/java/com/bairuitech/anychat/: AnyChatAudioHelper.java  AnyChatCoreSDK.java  AnyChatCoreSDKEvent.java  AnyChatObjectDefine.java  AnyChatObjectEvent.java  AnyChatOrientationEventListener.java  AnyChatOutParam.java  AnyChatPrivateChatEvent.java  AnyChatRecordEvent.java  AnyChatSensorHelper.java  AnyChatStateChgEvent.java  AnyChatTextMsgEvent.java  VideoRenderer.java
src/app/src/main/java/com/cmbc/av/: Key.java  SDKConfig.java
src/app/src/main/java/com/cmbc/av/activity/: ScreenShareActivity.java  ScreenShareControl.java  ScreenShareModel.java
src/app/src/main/res/layout/: wbank_activity_screenshare.xml
src/app/src/main/res/values/: array.xml  colors.xml
src/gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
